--- a/Nitrox/releases.json
+++ b/Nitrox/releases.json
@@ -1,6 +1,6 @@
 [
   {
-    "url": "https://github.com/Papela/Nitrox-Cracked-Mod/releases/download/V1.7.1.5/NitroxMod_1.7.1.2-Alpha.zip",
+    "url": "https://www.mediafire.com/file/5i4m6vf2tpzz9wk/NitroxMod_1.8.0.0-Dev.zip",
     "version": "1.8.0.0",
     "filesize": "8.2",
     "md5": "0750084fee853cb1940e426d663fa05f"
