--- a/Nitrox/releases.json
+++ b/Nitrox/releases.json
@@ -1,9 +1,15 @@
 [
   {
+    "url": "https://github.com/Papela/Nitrox-Cracked-Mod/releases",
+    "version": "1.8.0.1",
+    "filesize": "16.3",
+    "md5": "c6f4744fe81d66b50e10012123d1ba95"
+  },
+  {
     "url": "https://www.mediafire.com/file/5i4m6vf2tpzz9wk/NitroxMod_1.8.0.0-Dev.zip",
     "version": "1.8.0.0",
     "filesize": "8.2",
-    "md5": "0750084fee853cb1940e426d663fa05f"
+    "md5": "bb5fa03445274dc9f751385e533633e3"
   },
   {
     "url": "https://github.com/SubnauticaNitrox/Nitrox/releases/download/1.7.1.0/Nitrox_1.7.1.0.zip",
