--- a/Nitrox/releases.json
+++ b/Nitrox/releases.json
@@ -1,9 +1,9 @@
 [
   {
-    "url": "https://github.com/Papela/Nitrox-Cracked-Mod/releases",
+    "url": "https://github.com/Papela/Nitrox-Cracked-Mod/releases/tag/V1.8.0.1",
     "version": "1.8.0.1",
-    "filesize": "16.3",
-    "md5": "c6f4744fe81d66b50e10012123d1ba95"
+    "filesize": "8.16",
+    "md5": "65d1761e5574f7bb4e2cedaf39f1d40d"
   },
   {
     "url": "https://www.mediafire.com/file/5i4m6vf2tpzz9wk/NitroxMod_1.8.0.0-Dev.zip",
